[package]
name = "concealed-schnorr"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
ark-bn254={ version = "0.5.0", features = ["r1cs"] }
poseidon-rs="*"
ff_ce="0.11"
hex="0.4"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize="0.5.0"
ark-snark = "0.5.1"
ark-crypto-primitives = { version = "0.5.0", features = ["sponge","r1cs"] }
light-poseidon="0.4.0"
rand="0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_concealed"
harness = false